--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
               </button>
               <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                 <div class="navbar-nav ">
-                  <a class="nav-link active " aria-current="page" href="#">Home</a>
+                  <a class="nav-link active " aria-current="page" href="./index.html">Home</a>
                   <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">About us</a>
+                  <a class="nav-link" href="././about.html">About us</a>
                   <a class="nav-link disabled" aria-disabled="true">New Branch</a>
                 </div>             
               </div>
@@ -30,11 +30,111 @@
     </div>
 
 
+<div class="">
+    <div class="m-5 text"> <h1> Our Story</h1></div>
+    <div class="mx-5 px-5">
+<p>  The timely launch marks the five year anniversary of Hunger Inc. and fittingly puts the spotlight on the sweets that shaped all our happy occasions. However, it’s not mithai as we know it.</p>
+  <p>  the company looked at Indian sweets and the tradition of gifting sweets through a new lens of play. The team scoured India, gathering knowledge, recipes and imbibing techniques from the masters.</p>  
+<p> At the sweet shop, our chefs turned these traditions on their head to create sweets that may look and sound familiar but prompt surprise and wonder through both presentation and flavours.</p>
+</div>
+</div>
+
+<div style="margin-top: 10%;"> <h1 class="text-bg text-center ">  Our Shop  </h1></div>
+<div class="my-5"> 
+<img src="././img/shop1.jfif"  style="height: 200px; width: auto;"/>
+<img src="././img/shop2.jfif" style="height: 200px; width: 250px;"/>
+<img src="././img/shop3.jfif" style="height: 200px; width: auto;"/>
+<img src="././img/shop4.jfif" style="height: 200px; width: 250px;"/>
+<img src="././img/shop5.jfif" style="height: 200px; width: 250px;"/>
+</div>
+
+
+
+<div style="margin-top: 150px;">
+ <div style="background-color: #aed1ba;">
+  <div class="text-center p-4" > <h1 class="heading-font">  Our Features</h1></div> 
+  <div class="d-flex"> <hr/>
+
+      <div class="d-flex m-4 pragraph-text" > <img src="././img/cream.png" class="icon"/>
+     <p class="fs-4"> High Quality Creams</p> </div>
+
+   <div class="d-flex m-4  pragraph-text"> <img src="././img/high-quality.png" class="icon"/>
+     <p class="fs-4 ">Rich Flavours</p> </div>
+
+   <div class="d-flex m-4  pragraph-text"> <img src="././img/vegan.png"  class="icon">
+     <p class="fs-4 "> Vegan</p> </div>
+ </div>
+ <div class="d-flex" style="margin-left: 15%;">
+  <div class="d-flex m-4  pragraph-text" > <img src="././img/fresh.png" class="icon"/>  
+    <p class="fs-4 p-3"> Natural and Fresh Ingredients </p></div>
+
+    <div class="d-flex m-4  pragraph-text " > <img src="././img/laddu.png" class="icon"/>  
+    <p class="fs-4 p-3">Balanced Sweetness</p> </div>
+ </div>
+</div>
 
 
 
 
 
+<footer class="main">
+
+    <div class="foot ">Quick Links
+        <hr>
+
+        <div class="footer"><i class="fa-solid fa-house fa-sol"></i>&nbsp;&nbsp;<a href="./../index.html"
+                class="b">Home</a>
+        </div>
+        <div class="footer "><i class="fa-solid fa-gear fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/services.html"
+                class="b">Services
+            </a></div>
+        <div class="footer "><i class="fa-solid fa-list fa-sol"></i>&nbsp;&nbsp;&nbsp;<a href="./../Pages/menu-page.html"
+                class="b">Menu</a></div>
+        <div class="footer "><i class="fa-solid fa-cart-shopping fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/product-card.html"
+                class="b">Store</a></div>
+        <div class="footer "><i class="fa-solid fa-file-pen fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/registration.html"
+                class="b">Registration</a></div>
+        <div class="footer "><i class="fa-solid fa-thumbs-up fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/review-page.html"
+                class="b">Review</a></div>
+        <div class="footer "><i class="fa-solid fa-user fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/about-us.html"
+                class="b">About Us</a></div>
+
+
+    </div>
+
+
+    <div class="contact1">Contact Us
+        <hr>
+        <div class="footer"><i class="fa-solid fa-phone-volume fa-sol"></i>&nbsp;&nbsp;<a href="tel:7744049590"
+                class="b">+91 9356670544</a></div>
+        <div class="footer "><i class="fa-solid fa-envelope fa-sol"></i>&nbsp;&nbsp;<a
+                href="mailto: janvichincholkar14@gmail.com" class="bb"> janvichincholkar14@gmail.com</a></div>
+
+        <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19" onclick="return ready()" class="a"
+                target="_blank"><i class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
+                href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a" target="_blank"><i
+                    class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a href="https://wa.me/7744049590" onclick="return ready()"
+                class="a" target="_blank"><i class="fa-brands fa-whatsapp fa-brand"></i></a>
+            &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="a" target="_blank"><i
+                    class="fa-brands fa-github fa-brand"></i></a></div>
+        <br>
+
+    </div>
+    <div class="location">Location
+        <hr>
+        <div class="footer"><i class="fa-solid fa-location-dot fa-sol"></i></i>&nbsp;&nbsp;<a
+                href="https://maps.app.goo.gl/TCA1th79iKR1wiRE9" class="b"> Near Jatpura Gate Road, 
+                 <br>Dist-Chandrapur-442402
+            </a></div>
+        <div class="footer "><iframe class="mapl"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d777.7157158970201!2d74.4609393!3d20.9038021!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdeef04875b6c27%3A0xb9b55ff007fa15d1!2sWF36%2BGHV%2C%20Deur%20Budruk%2C%20Maharashtra%20424302!5e1!3m2!1sen!2sin!4v1712915607325!5m2!1sen!2sin"
+                width="280" height="170" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+    </div>
+
+</footer>
 
 
 
