--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
               </button>
               <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                 <div class="navbar-nav ">
-                  <a class="nav-link active " aria-current="page" href="#">Home</a>
+                  <a class="nav-link active " aria-current="page" href="././index.html">Home</a>
                   <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">About us</a>
+                  <a class="nav-link" href="././about.html">About us</a>
                   <a class="nav-link disabled" aria-disabled="true">New Branch</a>
                 </div>             
               </div>
