--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                 <div class="navbar-nav ">
                   <a class="nav-link active " aria-current="page" href="././index.html">Home</a>
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="././shop.html">Our Sweets</a>
                   <a class="nav-link" href="././about.html">About us</a>
                   <a class="nav-link disabled" aria-disabled="true">New Branch</a>
                 </div>             
