--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@
     <div >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <img src="./img/icon.png" alt="Logo" width="60" height="70" class="d-inline-block align-text-top mx-3">
-            <div class="container-fluid navbar">
+            <div class="container-fluid navbar color">
               <a class="navbar-brand mx-1 fs-2 fw-bold" href="#">Rasraj</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-                <div class="navbar-nav ">
+                <div class="navbar-nav fw-bold ms-5">
                   <a class="nav-link active " aria-current="page" href="./index.html">Home</a>
                   <a class="nav-link" href="././shop.html">Our Sweets</a>
                   <a class="nav-link" href="././about.html">About us</a>
