--- a/shop.html
+++ b/shop.html
@@ -11,14 +11,14 @@
 <body>
     <div >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <img src="./img/icon.png" alt="Logo" width="60" height="70" class="d-inline-block align-text-top mx-3">
-            <div class="container-fluid navbar">
+            <img src="./img/icon.png" alt="Logo" width="60" height="70" class= " d-inline-block align-text-top mx-3">
+            <div class="container-fluid navbar color">
               <a class="navbar-brand mx-1 fs-2 fw-bold" href="#">Rasraj</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-                <div class="navbar-nav ">
+                <div class="navbar-nav fw-bold ms-5">
                   <a class="nav-link active " aria-current="page" href="././index.html">Home</a>
                   <a class="nav-link" href="././shop.html">Our Sweets</a>
                   <a class="nav-link" href="././about.html">About us</a>
@@ -34,9 +34,9 @@
         <div  style="margin-bottom: 5%;"> <h1 class="heading-font m-3 bolder fw-bolder text-center text-bg "> <img src="././img/laddu.png"  style="height: 80px;"/> Speical Deserts</h1></div>
         <div class="d-flex ">
           <div class="dish-name mt-5"> 
-            <button onclick="sweet1()" class="d-block btn btn-lg btn btn-success button fs-4 p-2 m-3" style="width: 200px;">Milk Cake </button>
-            <button onclick="sweet2()" class="d-block btn btn-lg  btn btn-success button fs-4  p-2 m-3" style="width: 200px;"> Rasmalai</button>
-            <button onclick="sweet3()" class="d-block btn btn-lg btn btn-success button fs-4  p-2 m-3" style="width: 200px;"> Malai Rubadi</button>
+            <button onclick="sweet1()" class="d-block btn btn-lg btn btn-warning button fs-4 p-2 m-3" style="width: 200px;">Milk Cake </button>
+            <button onclick="sweet2()" class="d-block btn btn-lg  btn btn-warning button fs-4  p-2 m-3" style="width: 200px;"> Rasmalai</button>
+            <button onclick="sweet3()" class="d-block btn btn-lg btn btn-warning button fs-4  p-2 m-3" style="width: 200px;"> Malai Rubadi</button>
            
         
            </div>
@@ -58,7 +58,7 @@
     <div class="card-body">
       <h5 class="card-title fs-4">Ghevar (Rajasthani Honeycomb Fritter)</h5>
       <p class="card-text"> a honeycomb-like texture, made from ghee, maida, and sugar syrup.</p>
-      <button class="btn btn-success fs-4 ms-5 " style="margin-top: 28%;">Order Now</button>
+      <button class="btn btn-warning fs-4 ms-5 " style="margin-top: 28%;">Order Now</button>
     </div>
   </div>
 
@@ -67,7 +67,7 @@
     <div class="card-body">
       <h5 class="card-title fs-4">Coconut Poli</h5>
       <p class="card-text">sweet Coconut Poli made with jaggery, Tamilnadu style preparation.</p>
-      <button class="btn btn-success fs-4 ms-5" style="margin-top: 38%;">Order Now</button>
+      <button class="btn btn-warning fs-4 ms-5" style="margin-top: 38%;">Order Now</button>
     </div>
   </div>
 
@@ -76,7 +76,7 @@
     <div class="card-body">
       <h5 class="card-title fs-4">SheerKhurma</h5>
       <p class="card-text">The main ingredients used in sheer khurma are vermicelli, whole milk, sugar and dates. Depending on the region, cardamom, pistachios, almonds, cloves, saffron, raisins, and rose water are also added.</p>
-      <button class="btn btn-success fs-4 ms-5">Order Now</button>
+      <button class="btn btn-warning fs-4 ms-5">Order Now</button>
     </div>
   </div>
 
@@ -90,7 +90,7 @@
     <div class="card-body">
       <h5 class="card-title fs-4">Shakkar Para</h5>
       <p class="card-text">an Indian sweet snack made from a dough of sugar, ghee, maida flour, and semolina</p>
-      <button class="btn btn-success fs-4 ms-5" style="margin-top:70%;">Order Now</button>
+      <button class="btn btn-warning fs-4 ms-5" style="margin-top:70%;">Order Now</button>
     </div>
   </div>
 
@@ -99,7 +99,7 @@
     <div class="card-body">
       <h5 class="card-title fs-4">Shahi Balushahi</h5>
       <p class="card-text">Traditionally, a Balushahi Recipe has all-purpose flour (maida) and sugar syrup as primary ingredients. </p>
-      <button class="btn btn-success fs-4 ms-5" style="margin-top: 60%;">Order Now</button>
+      <button class="btn btn-warning fs-4 ms-5" style="margin-top: 60%;">Order Now</button>
     </div>
   </div>
 
@@ -108,7 +108,7 @@
     <div class="card-body">
       <h5 class="card-title fs-4">Mango Shahi Tukda</h5>
       <p class="card-text">Shahi Tukda is a rich, royal and popular dessert from the Mughlai Cuisine And additionaaly made up With Mangoes.</p>
-      <button class="btn btn-success fs-4 ms-5" style="margin-top: 50%;">Order Now</button>
+      <button class="btn btn-warning fs-4 ms-5" style="margin-top: 50%;">Order Now</button>
     </div>
   </div>
 
